corrected list items for top nav in dark mode

--- a/css/styles.css
+++ b/css/styles.css
@@ -287,6 +287,6 @@ footer {
     }
 
     nav ul li {
-        background-color: var(--secondary-font-color);
+        background-color: var(--main-bg-color);
     }
 }
